places-view: show an error dialog on failed connection

Since 474a6c2aa025fcd94bff50e3501a2eb41e4f0388, due to an overlook, no
error is displayed if a connection to a server fails.

This commit restores error reporting by connecting to the
NautilusPlacesView show-error-message signal.

https://bugzilla.gnome.org/show_bug.cgi?id=704872